--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.1.3",
   "author": "Austin Green",
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "bulma": "^0.9.0",
     "emotion": "^11.0.0",
     "gatsby": "^2.25.0",
@@ -26,6 +27,7 @@
     "node-sass": "^4.14.0",
     "prop-types": "^15.6.0",
     "react": "^16.8.4",
+    "react-bootstrap": "^1.5.2",
     "react-custom-share": "^0.4.8",
     "react-dom": "^16.8.4",
     "react-helmet": "^6.0.0",
