--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "bulma": "^0.9.0",
+    "emailjs-com": "^2.6.4",
     "emotion": "^11.0.0",
     "gatsby": "^2.25.0",
     "gatsby-image": "^2.3.5",
