--- a/package.json
+++ b/package.json
@@ -28,13 +28,14 @@
     "netlify-cms-app": "^2.14.30",
     "node-sass": "^4.14.0",
     "prop-types": "^15.6.0",
-    "react": "^16.8.4",
+    "react": "^16.14.0",
     "react-bootstrap": "^1.5.2",
     "react-custom-share": "^0.4.8",
-    "react-dom": "^16.8.4",
+    "react-dom": "^16.14.0",
     "react-helmet": "^6.0.0",
     "react-icons": "^4.2.0",
     "react-instagram-embed": "^2.0.0",
+    "reactstrap": "^8.9.0",
     "uuid": "^7.0.0"
   },
   "keywords": [
