--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "emotion": "^11.0.0",
     "gatsby": "^2.25.0",
     "gatsby-image": "^2.3.5",
+    "gatsby-plugin-google-gtag": "^3.3.0",
     "gatsby-plugin-netlify": "^2.11.1",
     "gatsby-plugin-netlify-cms": "^4.2.5",
     "gatsby-plugin-purgecss": "^5.0.0",
